# code-mage

./: .code-mage-config.toml  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
code_mage/: api.py  argsParser.py  codeMage.py  loadConfig.py  translator.py
example/: plain.txt  sample.js  test.js
tests/: test_api.py  test_argsParser.py  test_loadConfig.py  test_translator.py
