[tool.poetry]
name = "code-mage"
version = "1.0.0"
description = ""
authors = ["gitdevjin <dev.hjshin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.44.1"
python-dotenv = "^1.0.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[tool.ruff]
line-length = 100
exclude = [         
    "docs/*",           
    "*.pyc",            
    "migrations/*",     
    "example/*",
    "__pycache__/*",
    "*.env",
    "**/*.md",
    "*.md"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codemage = 'code_mage.codeMage:main'

